# greg.prk

./: .gitignore  Day2_RAG_ChatGPT_(3차)_ipynb의_사본.ipynb  Day3_RAG_agent_(3차)_ipynb의_사본.ipynb  pyproject.toml
src/rag_agent/: main.py  workflow.py
src/rag_agent/base/: __init__.py  answer_grader_chain.py  generator_chain.py  graph_state.py  hallucination_grader_chain.py  openai.py  question_router_chain.py  relevance_grader_chain.py  retrieval_grader_chain.py  tavily_client.py  vectorstore.py
src/rag_agent/edges/: __init__.py  decide_to_answer.py  decide_to_generate.py  grade_generation.py  route_question.py
src/rag_agent/nodes/: __init__.py  check_hallucination.py  check_relevance.py  generate.py  grade_documents.py  retrieve.py  web_search.py
